Supporto_Openshift_Labels/daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: logging-daemonset
  labels:
    app: logging
spec:
  selector:
    matchLabels:
      app: logging
  template:
    metadata:
      labels:
        app: logging
    spec:
      containers:
      - name: logging-agent
        image: busybox
        command: ["sh", "-c", "while true; do sleep 3600; done"]
