Supporto_Openshift_Labels/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-deployment
spec:
  type: NodePort
  selector:
    app : web
    environment: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
