Supporto_Openshift_Labels/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - host: nginx-example.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-deployment
            port:
              number: 80
